--- a/css/aemr.webflow.css
+++ b/css/aemr.webflow.css
@@ -2253,6 +2253,18 @@ figcaption {
   font-size: 1rem;
   line-height: 1.6;
 }
+.form-input-textarea {
+  color: #000;
+  background-color: #fff;
+  border: .0625rem solid #ccc;
+  border-radius: .25rem;
+  width: 100%;
+  height: auto;
+  margin-bottom: 0;
+  padding: .5rem .75rem;
+  font-size: 1rem;
+  line-height: 1.6;
+}
 
 .form-input:focus {
   border-color: #000;
