--- a/css/aemr.webflow.css
+++ b/css/aemr.webflow.css
@@ -4959,3 +4959,91 @@ canvas {
   background-color: #21bdd4;
   border-color: #21bdd4;
 }
+#ticket-search {
+  background: url('/ticket_system/images/search.svg') no-repeat right 12px center;
+  background-size: 18px 18px;
+  padding-right: 36px; /* make room for the icon */
+}
+
+
+.ticket_component {
+  display: flex;
+  border-radius: 0.5rem;
+  background-color: white;
+}
+
+.ticket_info {
+  display: flex;
+  max-width: 17rem;
+  min-width: 14rem;
+  padding: 2rem 1rem;
+  flex-flow: column;
+  gap: 1rem;
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: #eee;
+}
+
+.ticket_comments {
+  padding: 2rem;
+  flex: 1 1 0%;
+}
+
+.ticket_comment-wrap {
+    margin-top: 3rem;
+}
+
+.ticket_info-wrap {
+    grid-column-gap: .5rem;
+    grid-row-gap: .5rem;
+    flex-flow: column;
+    display: flex;
+}
+
+.ticket_info-row {
+    grid-column-gap: .25rem;
+    grid-row-gap: .25rem;
+    font-size: .875rem;
+    display: flex;
+}
+
+.ticket_comment-row-wrap {
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+    flex-flow: column;
+    margin-top: 1rem;
+    display: flex;
+}
+
+.ticket_comment-row {
+    grid-column-gap: .25rem;
+    grid-row-gap: .25rem;
+    border: 1px solid #eee;
+    border-radius: .5rem;
+    flex-flow: column;
+    padding: .5rem;
+    display: flex;
+}
+.ticket_comment-row-heading {
+    grid-column-gap: .5rem;
+    grid-row-gap: .5rem;
+    font-size: .875rem;
+    display: flex;
+}
+
+.ticket_comment-text {
+    font-size: .875rem;
+}
+
+@media screen and (max-width: 767px) {
+  .ticket_info {
+    max-width: none;
+    border-right-width: 0px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .ticket_component {
+    flex-flow: column;
+  }
+}
