--- a/css/aemr.webflow.css
+++ b/css/aemr.webflow.css
@@ -5021,7 +5021,7 @@ canvas {
     border: 1px solid #eee;
     border-radius: .5rem;
     flex-flow: column;
-    padding: .5rem;
+    padding: 1rem;
     display: flex;
 }
 .ticket_comment-row-heading {
@@ -5029,12 +5029,38 @@ canvas {
     grid-row-gap: .5rem;
     font-size: .875rem;
     display: flex;
+    color: #164294;
+}
+
+.ticket_username{
+  font-weight: 600;
 }
 
 .ticket_comment-text {
     font-size: .875rem;
+    color: #666;
+}
+.text-color-light-grey{
+  color: #666;
 }
 
+.comment-textarea{
+  width: 100%;
+  height: 100px;
+  border: 1px solid #c7c7c7;
+  border-radius: .5rem;
+  padding: .5rem;
+  font-size: .875rem;
+  resize: vertical;
+}
+.comment-form{
+  width:  100%;
+}
+
+.button.is-xsmall{
+  padding:0.5rem 1.25rem;
+  font-size: 0.875rem;
+}
 @media screen and (max-width: 767px) {
   .ticket_info {
     max-width: none;
